# pkgr

./: .gitignore  LICENSE  README.md  USAGE.md  requirements.txt  setup.cfg  xpkg.py
pkgr/: __main__.py
pkgr/core/: __init__.py  build.py  dependencies.py  grab.py  install.py  log.py  patch.py  util.py
xpkg/: __main__.py
xpkg/core/: build.py  dependencies.py  dependency_graph.py  grab.py  install.py  log.py  patch.py  util.py
