[metadata]
name = pkgr
version = 1.0.0
author = Synthels
author_email = synthels.me@gmail.com
description = Build, patch and install packages quickly
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/synthels/pkgr
project_urls =
    Bug Tracker = https://github.com/synthels/pkgr/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
include_package_data = true
python_requires = >=3.6
install_requires =
    colored==1.4.3
    docopt==0.6.2
    mc-bin-client==1.0.1
    PyYAML==6.0
